# Hospitality-Signal-Extractor

./: README.md  pyproject.toml
data/first_iteration/: 1_base_data.jsonl  booking_intent_artifact.pkl
data/second_iteration/: 1_base_data.jsonl  booking_intent_artifact.pkl
src/hospitality/: signal_generation.ipynb
src/hospitality/scripts/: dataset_generator.py  embeddings_generator.py  feature_extractor.py  feature_processor.py  lightgbm_training.ipynb
