[project]
name = "hospitality"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain[openai]>=1.3.11",
    "lightgbm>=4.6.0",
    "loguru>=0.7.3",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
]

[build-system]
requires = ["uv_build>=0.11.26,<0.12"]
build-backend = "uv_build"
